--- a/src/booking.css
+++ b/src/booking.css
@@ -1,6 +1,7 @@
 .booking {
     background-color: white;
     margin: 100px 250px;
+    box-shadow: 0 20px 40px 0 rgba(0,0,0,.08);
 }
 
 .booking-info {
@@ -85,4 +86,19 @@ option {
     font-weight: 800;
     color:  rgb(66, 62, 62);
     border-radius: 5px;
+}
+
+@media screen and (max-width: 768px) {
+    .booking {
+        margin: 30px;
+    }
+
+    .grid {
+        grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    }
+ 
+    .search {
+        padding: 10px 0px;
+        margin-top: 5px;
+    }
 }
