--- a/src/pickBike.css
+++ b/src/pickBike.css
@@ -74,3 +74,34 @@
     background-color: rgb(239, 28, 36);
     color: white;
 }
+
+@media screen and (max-width: 768px) {
+    .pickBike {
+        margin-top: 100px;
+        text-align: center;
+        padding: 15px;
+    }
+
+    .bike-container {
+        flex-direction: column;
+        gap: 50px;
+    }
+
+    .bike-container > img {
+        width: 80%;
+    }
+
+    .bike-buttons {
+        width: 100%;
+    }
+
+    .bike-buttons > button {
+        border: none;
+        padding: 20px;
+    }
+
+    .selected-bike {
+        width: 80%;
+    }
+
+}
