--- a/src/save.css
+++ b/src/save.css
@@ -20,3 +20,16 @@
 .multipleBikes {
     width: 100%;
 }
+
+@media screen and (max-width: 768px) {
+    .save {
+        padding: 50px 25px;
+    }
+     
+    .save :nth-child(1) {
+        font-size: 44px;
+        font-weight: 900;
+        line-height: 60px;
+    }
+
+}
